fix config loading + add role editing
